hopefully fixed page layout issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,7 +31,7 @@ body {
   font-family: 'Quicksand';
   font-weight: 700;
   font-style: italic;
-  background: gray;
+  background: #fefbf7;
 }
 #splashBackground {
   position: fixed;
@@ -170,7 +170,7 @@ h1.splashPageAboutTitle {
   padding: 20px;
   border: 1px solid black;
   border-radius: 20px;
-  max-width: 90%;
+  /*max-width: 90%;*/
 }
 .eachPost:last-child{
   margin-bottom: 40px;
